sort.pancake.BurnedPancake.scala.error
Compilation error:
BurnedPancake:14: error: i is already defined as variable i
  var i = l-1
           ^